--- a/Monitoring/Kibana/deployment.yaml
+++ b/Monitoring/Kibana/deployment.yaml
@@ -23,6 +23,8 @@ spec:
           value: http://elasticsearch:9200
         - name: XPACK_SECURITY_ENABLED
           value: "true"
+        - name: SERVER_BASEPATH
+          value: /monitoring/kibana
         ports:
         - containerPort: 5601
           name: http
