--- a/IngressService/external.yaml
+++ b/IngressService/external.yaml
@@ -21,3 +21,16 @@ spec:
   externalName: kibana.monitoring.svc.cluster.local
   ports:
   - port: 5601
+
+---
+
+apiVersion: v1
+kind: Service
+metadata:
+  name: flask-site
+  namespace: default
+spec:
+  type: ExternalName
+  externalName: flask-site.aproject.svc.cluster.local
+  ports:
+  - port: 5000
