--- a/HelloWorldService/deployment.yaml
+++ b/HelloWorldService/deployment.yaml
@@ -1,4 +1,4 @@
-apiVersion: apps/v1
+apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
   name: helloweb
@@ -13,8 +13,29 @@ spec:
       labels:
         app: hello
     spec:
+      affinity:
+        nodeAffinity:
+          preferredDuringSchedulingIgnoredDuringExecution:
+          - weight: 80
+            preference:
+              matchExpressions:
+              - key: type
+                operator: In
+                values:
+                - operation
+          - weight: 20
+            preference:
+              matchExpressions:
+              - key: type
+                operator: In
+                values:
+                - base
       containers:
       - name: hello-app
         image: gcr.io/google-samples/hello-app:1.0
         ports:
         - containerPort: 8080
+        securityContext:
+          runAsUser: 405
+          readOnlyRootFilesystem: true
+
