--- a/Flask/Site/service.yaml
+++ b/Flask/Site/service.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: flask-site
-  namespace: aproject
+  namespace: default
 spec:
   selector: 
     app: flask-site
